# sensor_network_emulator

./: README.md
A1/: A1.cbp  A1.depend  A1.layout  main.cpp
A1_with_map/: A1_with_map.cbp  A1_with_map.layout  main.cpp
A2/: A2.depend  A2.layout  main.cpp
A2_with_map/: A2_with_map.cbp  A2_with_map.depend  main.cpp
A2_with_map_search_f/: A2_with_map_search_f.cbp  A2_with_map_search_f.depend  A2_with_map_search_f.layout  main.cpp
SS/sensor_network_v1/: main.cpp
SS/sensor_network_v2/: main.cpp
sensor_network/: CMakeLists.txt
sensor_network/include/: bus_controller.hpp  globals.hpp  link.hpp  link_access_controller.hpp  receiver.hpp  sensor.hpp  sensor_data.hpp  thread_task.hpp  utils.hpp
sensor_network/src/: acquire_sensor_data.cpp  bus_controller.cpp  globals.cpp  link.cpp  link_access_controller.cpp  main.cpp  receiver.cpp  run.cpp  sensor.cpp  sensor_data.cpp  transmit_sensor_data.cpp  utils.cpp
